<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:gravity="center_horizontal"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light">

        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@android:color/background_light"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/date_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="24sp"
                android:gravity="start"
                android:layout_alignParentStart="true"
                android:paddingStart="16dp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/hint"
                android:textSize="24sp"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:gravity="center_vertical|start"
            android:layout_alignParentStart="true"
            android:paddingStart="16dp"
            android:text="@string/descr"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_horizontal"
            android:textSize="24sp"
            android:layout_alignParentRight="true"
            android:hint="@string/des"/>

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_start"/>
            <View
                android:layout_width="80dp"
                android:layout_height="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/time_end"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <NumberPicker
                android:id="@+id/start_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_vertical"
                android:text=""/>
            <NumberPicker
                android:id="@+id/start_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="110dp"
                android:layout_height="10dp"/>

            <NumberPicker
                android:id="@+id/end_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center_vertical"
                android:text=""/>
            <NumberPicker
                android:id="@+id/end_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/button_make_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/add_photo"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/photo"/>

            <LinearLayout
                android:id="@+id/linear_photo"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp" />

        </LinearLayout>

    </LinearLayout>

    </ScrollView>

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/button_save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:onClick="onClickSave"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:onClick="onClickCancel"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/white"/>

            <Button
                android:id="@+id/button_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:text="@string/delete"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:onClick="onClickDelete"/>

        </LinearLayout>





</LinearLayout>