<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/radio_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/month"/>

                    <View
                        android:layout_width="10dp"
                        android:layout_height="30dp"/>

                    <RadioButton
                        android:id="@+id/radio_var"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/var"/>

                </RadioGroup>

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp"/>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <DatePicker
                        android:id="@+id/date_start"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:calendarViewShown="false"
                        android:layout_weight="1" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="10dp"
                        android:layout_weight="1" />

                    <DatePicker
                        android:id="@+id/date_end"
                        android:layout_width="wrap_content"
                        android:layout_height="150dp"
                        android:calendarViewShown="false"
                        android:layout_weight="1" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="1dp"
                        android:layout_weight="1" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_statistic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:text="@string/rep"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:background="@color/colorAccent"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:onClick="onClickStatistic"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top_count"/>

            <TextView
                android:id="@+id/text_top_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/top_time"/>

            <TextView
                android:id="@+id/text_top_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:id="@+id/linear_check"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sum_time"/>

            <TextView
                android:id="@+id/text_top_sum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:paddingRight="15dp"
                android:background="@android:color/background_dark"
                android:orientation="horizontal" >
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>